# expunge

./: .gitignore  CMakeLists.txt  README.md  exewrapper.cpp  exewrapper.h  expunge.icns  expunge.rc  expunge.xcf  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cmake.yml
